src/Root/index.css
.className {
  position: relative;

  > h1 {
    position: absolute;
    font-size: 3rem;
    margin: 0;
    top: -1.25rem;
    right: 0;
    color: #202020;
    user-select: none;
  }

  #menu {
    display: inline-block;
    font-weight: bold;
    font-family: monospace;

    &:after {
      content: ' =';
      color: #666;
    }

    > ul {
      display: inline;
      list-decoration: none;
      padding: 0;
      margin: 0;

      > li {
        display: inline-block;
        margin-right: 0.5rem;

        &:last-child {
          margin-right: 0;
        }

        > a {
          text-decoration: none;
        }
      }
    }
  }

  #container {
  }
}

